[gd_scene load_steps=19 format=2]

[ext_resource path="res://Tool.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Tools/Starter_drill1.png" type="Texture" id=2]
[ext_resource path="res://MiningDrill.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=50]
radius = 20.0
height = 36.2567

[sub_resource type="Animation" id=51]
resource_name = "Idle_Drill_Down"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -45 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Hitbox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, 115 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Hitbox:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=52]
resource_name = "Idle_Drill_Left"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -45 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Hitbox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Hitbox:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=53]
resource_name = "Idle_Drill_Right"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -45 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Hitbox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 115, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Hitbox:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=54]
resource_name = "Idle_Drill_Up"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -45 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Hitbox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -10, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Hitbox:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="AnimationNodeBlendSpace2D" id=37]
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "Idle_Drill_Left"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "Idle_Drill_Down"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "Idle_Drill_Right"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "Idle_Drill_Up"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
resource_local_to_scene = true
auto_triangles = false
blend_point_0/node = SubResource( 40 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 41 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 42 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 43 )
blend_point_3/pos = Vector2( 0, -1 )
triangles = PoolIntArray( 0, 1, 3, 1, 2, 3 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachine" id=48]
states/Drilling/node = SubResource( 37 )
states/Drilling/position = Vector2( 373, 70 )
states/IdleMiningDrill/node = SubResource( 19 )
states/IdleMiningDrill/position = Vector2( 182, 70 )
transitions = [ "IdleMiningDrill", "Drilling", SubResource( 38 ), "Drilling", "IdleMiningDrill", SubResource( 39 ) ]
start_node = "IdleMiningDrill"
graph_offset = Vector2( -205, 12 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=49]

[node name="MiningDrill" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, -45 )
z_index = -1

[node name="Sprite" parent="Node2D" index="0"]
position = Vector2( 8, -45 )
z_index = -1
texture = ExtResource( 2 )
hframes = 12

[node name="Hitbox" parent="Node2D/Sprite" index="0"]
position = Vector2( -5, 115 )
rotation = 1.5708

[node name="DrillHead" type="CollisionShape2D" parent="Node2D/Sprite/Hitbox" index="0" groups=["DrillHeads"]]
position = Vector2( -57.5, 0 )
rotation = 1.5708
shape = SubResource( 50 )
disabled = true

[node name="CollisionShape2D" parent="Node2D/Sprite/Hitbox" index="1"]
position = Vector2( -65, -2 )

[node name="Mods" type="Node2D" parent="Node2D/Sprite" index="1"]

[node name="RockSmashing" type="Sprite" parent="Node2D/Sprite" index="2"]

[node name="AnimationPlayer" parent="." index="2"]
anims/Idle_Drill_Down = SubResource( 51 )
anims/Idle_Drill_Left = SubResource( 52 )
anims/Idle_Drill_Right = SubResource( 53 )
anims/Idle_Drill_Up = SubResource( 54 )

[node name="AnimationTree" type="AnimationTree" parent="." index="3" groups=["DrillHead"]]
tree_root = SubResource( 48 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 49 )
parameters/Drilling/blend_position = Vector2( 0, 0 )
parameters/IdleMiningDrill/blend_position = Vector2( 0, 0 )

[node name="MiningDrill_Sound" type="AudioStreamPlayer" parent="." index="4"]

[connection signal="body_entered" from="." to="." method="_on_MiningDrill_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_MiningDrill_body_exited"]
